# protein-filter-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup_VNAR_OP.sh
.github/workflows/: package-check.yml
AMBER/: equil.in  heat.in  md.in  md.sh  min1.in  min2.in  postprocess_single_cpptraj.sh  pressure.in  run_single.sh  tleap.in  tleap.in.template
AMBER_MMPBSA/: collect_mmgbsa_binding_to_csv.py  collect_mmpbsa_results.py  fix_prmtop_for_mmpbsa.py  mmpbsa_binding_31.csv  mmpbsa_gb.in.template  mmpbsa_pb.in.template  prepare_rec_lig_topologies_for_mmpbsa.py  prepare_solute_topology_for_mmpbsa.py  run_mmpbsa_batch.py  run_mmpbsa_single.sh  run_mmpbsa_single_gb.sh
config/: full_pipeline_example.yaml  optimizing_default.yaml  part3.yaml  part3_100ns.yaml  part3_1ns_test.yaml  part3_quick_test.yaml
docs/: A2BINDER_GUIDE.md  AF3_ENVIRONMENT_COMPATIBILITY.md  API.md  ARCHITECTURE.md  BALANCED_MODE_FOR_AF3.md  CIF_SUPPORT.md  CLEANUP_SUMMARY.md  CLUSTERING_FILTER.md  CLUSTER_FILENAME_GUIDE.md  CODE_REVIEW_REPORT.md  DEVELOPMENT.md  DE_NOVO_QUICK_COOKBOOK.md  ENVIRONMENT_SETUP.md  FASTRELAX_PARAMETERS.md  FASTRELAX_PARAMETERS_DETAILED.md  FOLDSEEK_AND_FINE_CLUSTERING.md  FOLDSEEK_VS_OUR_SCRIPT.md  Foldseek_CIF优化说明.md  Foldseek优化方案.md  Foldseek集成优化指南.md  HOW_TO_READ_PARQUET.md  INSTALLATION_METHODS.md  INSTALLATION_TROUBLESHOOTING.md  IPSAE_CALCULATION_ANALYSIS.md  IPSAE_CODE_COMPARISON.md  IPSAE_INTEGRATION.md  IPSAE_METRICS_COMPARISON.md  IPSAE_METRICS_GUIDE.md  IPSAE_PARAMETERS.md  IPSAE_SCRIPT_ANALYSIS.md  JSON_FILE_DETECTION.md  METRICS_COMPUTATION_SEPARATION.md  NANOBODY_DESIGN_PLAN.md  OPTIMIZING_QUICK_COOKBOOK.md  PART1_AF3_AND_CLUSTERING.md  PART2_PYROSETTA.md  PART2_PYROSETTA_BATCH_USAGE.md  PART3_AMBER_8GPU.md  PART3_AMBER_POSTPROCESS.md  PART3_AMBER_WORKFLOW_SUMMARY.md  (+26 more)
docs/environments/: CONDA_ENV_USAGE.md  PF_ENV_CHECK.md  README.md  (+1 more)
examples/: basic_usage.py  two_stage_filtering.py
scripts/: README.md  ipsae.py  run_denovo_design.sh  run_design_pipeline.sh  run_full_pipeline.sh  run_full_pipeline_v2.py  run_optimization_pipeline.sh
tests/: __init__.py  conftest.py  test_chain_detection.py  test_config.py  test_config_validator.py  test_crash_detector.py  test_topology_check.py
(+85 files in other folders)
